Cors allowedOrigins were changed to several hosts